# sn2md

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: html.toml  org.toml
examples/: sn2md.toml.example-org
sn2md/: ai_utils.py  cli.py  importer.py  metadata.py  supernote_utils.py  types.py
sn2md/importers/: note.py  pdf.py  png.py
tests/sn2md/: test_ai_utils.py  test_cli.py  test_importer.py  test_metadata.py
tests/sn2md/fixtures/: test_config.toml  test_legacy_config.toml
tests/sn2md/importers/: test_note.py  test_pdf.py  test_png.py
